AGAVAL_BODEGAS_FRONT/Deploy/service-lab.yml
apiVersion: v1
kind: Service
metadata:
  name: bodegas-front
  namespace: bodegas
  labels:
    app: bodegas-front
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: bodegas-front
