AGAVAL_BODEGAS_FRONT/Deploy/ingress-lab.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: '*'
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: bodegas-front
  namespace: bodegas
spec:
  rules:
  - host: bodegas.agaval.com
    http:
      paths:
      - backend:
          service:
            name: bodegas-front
            port:
              number: 80
        path: /(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - bodegas.agaval.com
    secretName: bodegas-tls
status:
  loadBalancer:
    ingress:
    - ip: 20.96.47.114
